# opengl-breakout-project

./: .gitignore  CMakeLists.txt  README.md
assets/: shader.fragShader
assets/shaders/: shader.fragShader
headers/: shader_s.hpp  window_functions.h
includes/glad/: glad.h
sources/: main.cpp  window_functions.cpp
src/: glad.c  main.cpp
